# LotAR

./: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
LOTAR_Core/: CMakeLists.txt
LOTAR_Core/includes/: Tester.h
LOTAR_Core/src/: Tester.cpp  main.cpp
LOTAR_Server/: CMakeLists.txt
